# baseline_check

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: baseline_check.py  baseline_check_wrapper.py  baseline_run.py
src/testfiles/cisco_ios/: test_bfd_neighbor.yml  test_bgp_summary.yml  test_cef_exception.yml  test_interface_brief.yml  test_isis_neighbor.yml  test_module.yml  test_module_status.yml  test_mpls_interface.yml  test_ospf_neighbor.yml  test_pim_neighbor.yml  test_pings.yml  test_redundancy.yml  test_route_summary.yml  test_rsvp_interface.yml  test_xconnect.yml
src/testfiles/cisco_xr/: test_bfd_session.yml  test_bgp_summary.yml  test_cef_exception.yml  test_hsrp.yml  test_interface_brief.yml  test_isis_neighbor.yml  test_l2vpn.yml  test_ldp_neighbor.yml  test_mpls_interface.yml  test_ospf_neighbor.yml  test_pim_neighbor.yml  test_pings.yml  test_platform.yml  test_redundancy.yml  test_route_static.yml  test_route_summary.yml  test_rsvp_interface.yml  test_vrrp.yml
src/testfiles/juniper_junos/: test_bfd_session.yml  test_bgp_summary.yml  test_chassis_fpc.yml  test_chassis_hardware_models.yml  test_interfaces_terse.yml  test_ipv6_neighbors.yml  test_isis_adjacency.yml  test_isis_interface.yml  test_l2circuit.yml  test_ldp_interface.yml  (+12 more)
src/tfsm_templates/: nokia_sros_show_redundancy_multichassis_sync.textfsm  nokia_sros_show_router_bgp_summary_family.textfsm 
src/utils/: baseline_utils.py  custom_commands.py  the_differentiator.py  the_extractorator.py  the_recyclanator.py
tests/: test_empty.py
(+45 files in other folders)
